<pre>
date:
	* version 0.3

11/04/2007:
	* version 0.2
	* first public release
</pre>