@@ -37,6 +37,7 @@ FEATURES:
 6 gf = view source?
 6 make a real one-tab-mode, divert _all_ other targets, possible by setting a firefox option (set popup=0-3)
 6 Shift-Insert in textboxes pastes clipboard contents
+5 Use arrow keys in preview window
 5 make use of the ] and [ keys to e.g. jump to the next heading ]], next image ]i, previous textbox [t and so on
 5 add tag support to adding/deleting bookmarks
 4 Support multiple top-level windows?
